# pageliftAI

./: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  test_api_endpoints.py  test_semantic_categorization.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_analysis_input_to_job.py  0003_add_analysis_output_to_job.py
app/: config.py  main.py  models.py
app/api/: routes.py
app/services/: analyze.py  brand_extraction.py  component_mixer.py  css_generator.py  image_processing.py  parse.py  proportional_sizing.py  render.py  responsive_system.py  scrape.py  tasks.py  typography.py  validation.py
app/templates/: index.html  index_modern.html
app/tests/: test_healthz.py  test_parse.py
debug_archive/: debug_massive_elements_analysis.py  debug_pipeline.py  debug_pipeline_detailed.py  debug_sizing_issues.py  debug_template_content_logic.py  debug_template_rendering_issues.py  debug_text_alignment_issues.py  debug_website_building_issues.py  phase3_final_verification.py  portuguese_site.html  test_brand_colors.py  test_core_functionality.py  test_enhanced_scraping.py  test_fallback_edge_cases.py  test_fallback_strategies.py  test_full_site_output.html  test_real_websites.py  test_template_context_fix.py  test_text_alignment_fix.py  toronto_site.html  validate_sizing_fixes.py  validate_text_alignment_fixes.py
pagelift-ui/: package-lock.json  package.json
tasks/: PAGELIFT_IMPROVEMENT_MASTER_PLAN.md  PageLift_AI_Performance_Analysis_Final_Report.md  pagelift-improvement-plan.md  todo.md
(+42 files in other folders)
