[tool.poetry]
name = "pagelift-ai"
version = "0.1.0"
description = "PageLift AI backend service"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"
greenlet = "^3.2.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.34.0"
openai = "^1.97.0"
pydantic-settings = "^2.10.1"
jinja2 = "^3.1.6"
celery = "^5.5.3"
redis = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 